# Reminders

./: .gitignore  README.md  REMEMBRANCE_SERVICE.md  REMINDERS_SERVICE.md  RETAINER_SERVICE.md  Retainer.sln  com.github.dgsasha.Remembrance.yml  io.github.dgsasha.Remembrance.yml  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: flatpak_builder.yml  release.yml  windows.yml
data/: com.github.dgsasha.Remembrance.desktop  com.github.dgsasha.Remembrance.desktop.in  com.github.dgsasha.Remembrance.service.in  io.github.dgsasha.Remembrance.gschema.xml.in  io.github.dgsasha.Remembrance.metainfo.xml.in.in  io.github.remindersdevs.Reminders.gschema.xml.in  io.github.remindersdevs.Reminders.metainfo.xml.in.in  io.github.retainerdevs.Retainer.gschema.xml.in  io.github.retainerdevs.Retainer.metainfo.xml.in.in  meson.build
data/autostart/: com.github.dgsasha.Remembrance.desktop  com.github.dgsasha.Remembrance.desktop.in  meson.build
data/browser/: com.github.dgsasha.Remembrance.desktop.in  com.github.dgsasha.Remembrance.desktop.in.in  com.github.dgsasha.Remembrance.gschema.xml  com.github.dgsasha.Remembrance.gschema.xml.in  com.github.dgsasha.Remembrance.metainfo.xml.in  com.github.dgsasha.Remembrance.metainfo.xml.in.in  com.github.dgsasha.Remembrance.service.in  io.github.dgsasha.Remembrance.desktop.in.in  io.github.dgsasha.Remembrance.gschema.xml.in  io.github.dgsasha.Remembrance.metainfo.xml.in.in  io.github.dgsasha.Remembrance.service.in  io.github.remindersdevs.Reminders.desktop.in.in  io.github.retainerdevs.Retainer.desktop.in.in  io.github.retainerdevs.Retainer.service.in  meson.build
data/icons/: meson.build  svg_to_ico.ps1  svg_to_ico.py  svg_to_ico.sh  svg_to_png.py  svg_to_png_win.py
data/service/: com.github.dgsasha.Remembrance.Service.desktop.in  com.github.dgsasha.Remembrance.Service.desktop.in.in  io.github.dgsasha.Remembrance.Service.service.in  io.github.dgsasha.Remembrance.Service1.desktop.in.in  io.github.dgsasha.Remembrance.Service3.Reminders.xml.in  io.github.dgsasha.Remembrance.Service3.desktop.in.in  io.github.dgsasha.Remembrance.Service3.service.in  io.github.remindersdevs.Reminders.Service.desktop.in.in  io.github.remindersdevs.Reminders.Service.service.in  io.github.remindersdevs.Reminders.Service.xml.in  io.github.retainerdevs.Retainer.Service.desktop.in.in  io.github.retainerdevs.Retainer.Service.xml.in  meson.build
flatpak/: io.github.dgsasha.Remembrance.yml  io.github.remindersdevs.Reminders.yml  io.github.retainerdevs.Retainer.Devel.yml  io.github.retainerdevs.Retainer.yml  python3-modules.json  requirements.in  requirements.txt
flatpak/shared-modules/SDL2/: SDL2-no-libdecor.json  SDL2-with-libdecor.json
flatpak/shared-modules/linux-audio/: fluidsynth2-static.json
po/: LINGUAS  POTFILES  cs.po  de.po  es.po  fr.mo  fr.po  hi.po  hu.po  it.po  ko.po  meson.build  nb_NO.po  nl.po  pl.po  pt.po  remembrance.po  remembrance.pot  reminders.pot  retainer.pot  ru.po  tr.po  uk.po  update_potfile.ps1  update_potfile.sh  update_potfile_msys.sh  zh_Hans.po
src/: __init__.py  about.py  backend.py  info.py  main.py  meson.build  remembrance.py  reminder.py
src/browser/: __init__.py  about.py  application.py  caldav_sign_in.py  calendar.py  dnd_reminder.py  edit_lists_window.py  error_dialog.py  export_lists_window.py  import_lists_window.py  main_window.py  meson.build  microsoft_sign_in.py  move_reminders_window.py  preferences.py  remembrance.py  reminder.py  reminder_edit_page.py  reminder_edit_window.py  reminders.py  retainer.py  shortcuts_window.py
src/browser/resources/: meson.build  remembrance.gresource.xml  reminders.gresource.xml  retainer.gresource.xml  style.css  stylesheet.css
src/browser/resources/ui/: caldav_sign_in.ui  dnd_reminder.ui  edit_lists_window.ui  error_dialog.ui  export_lists_window.ui  import_lists_window.ui  main.ui  main_window.ui  main_window_win32.ui  microsoft_sign_in.ui  move_reminders_window.ui  ms_user_row.ui  preferences.ui  preferences_user_row.ui  reminder.ui  reminder_edit_page.ui  reminder_edit_window.ui  repeat_dialog.ui  shortcuts_window.ui  task_list_row.ui  time_box.ui  time_row.ui
src/resources/: meson.build  remembrance.gresource.xml  stylesheet.css
src/resources/ui/: main.ui  reminder.ui
src/service/: application.py  backend.py  caldav.py  countdowns.py  credentials.py  icalendar.py  meson.build  ms_to_do.py  queue.py  remembrance-service.py  reminder.py  reminders-service.py  retainer-service.py
windows/: LICENSE.rtf  Product.wxs  Reminders.spec.in  Reminders.wixproj  build_windows.ps1  freeze.py  meson.build  package-msys2.sh  settings.ini
windows/Retainer/: .gitignore  Retainer.msbuildproj  Retainer.spec.in  build_windows.ps1  freeze.py  meson.build  package-msys2.sh
windows/Retainer/gtk4/: 0001-win32-Improve-appearance-of-titlebars-in-Windows-10.patch  0002-win32-Center-newly-created-transient-windows.patch  0003-win32-Focus-modal-windows-when-clicking-on-unfocused.patch  0004-win32-Fix-minimize-and-maximize-buttons-missing-on-s.patch  PKGBUILD
windows/RetainerPackage/: .gitignore  Package-devel.appxmanifest  Package.StoreAssociation.xml  Package.appxmanifest  RetainerPackage.wapproj
windows/RetainerPackage/localization/en-US/: Resources.resw
windows/localization/: en-US.wxl
